--- a/Colab.ipynb
+++ b/Colab.ipynb
@@ -1,146 +1,167 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "79ddf98a",
-   "metadata": {},
-   "source": [
-    "# Welcome to DESI High @ Google Collab!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c7d4a3d",
-   "metadata": {},
-   "source": [
-    "![title](desihigh/images/colab.webp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1a017f3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f903986",
-   "metadata": {},
-   "source": [
-    "An exciting adventure awaits you as you will soon have at your fingertips hot-off-the-telescope DESI data to run your own experiments. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe224eea",
-   "metadata": {},
-   "source": [
-    "For you to create and save your own experiments, we'll run everything on Google Colab.  This will leave you with a copy of any additions on your Google Drive. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c38b0ba",
-   "metadata": {},
-   "source": [
-    "First, we'll need the starter script:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "269a5fae",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2022-02-11 22:23:24--  https://raw.githubusercontent.com/michaelJwilson/desihigh/main/setup_colab.py\n",
-      "Resolving raw.githubusercontent.com... 2606:50c0:8000::154, 2606:50c0:8001::154, 2606:50c0:8002::154, ...\n",
-      "Connecting to raw.githubusercontent.com|2606:50c0:8000::154|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 1123 (1.1K) [text/plain]\n",
-      "Saving to: 'setup_colab.py'\n",
-      "\n",
-      "setup_colab.py      100%[===================>]   1.10K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2022-02-11 22:23:24 (51.0 MB/s) - 'setup_colab.py' saved [1123/1123]\n",
-      "\n"
-     ]
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "786f4d66",
+      "metadata": {
+        "id": "786f4d66"
+      },
+      "outputs": [],
+      "source": [
+        "from PIL import Image"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "79ddf98a",
+      "metadata": {
+        "id": "79ddf98a"
+      },
+      "source": [
+        "# Welcome to DESI High @ Google Collab!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5c7d4a3d",
+      "metadata": {
+        "id": "5c7d4a3d"
+      },
+      "source": [
+        "![title](https://github.com/cylammarco/desihigh/blob/main/desihigh/images/colab.webp?raw=1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0f903986",
+      "metadata": {
+        "id": "0f903986"
+      },
+      "source": [
+        "An exciting adventure awaits you as you will soon have at your fingertips hot-off-the-telescope DESI data to run your own experiments. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fe224eea",
+      "metadata": {
+        "id": "fe224eea"
+      },
+      "source": [
+        "For you to create and save your own experiments, we'll run everything on Google Colab.  This will leave you with a copy of any additions on your Google Drive. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "adb458e0",
+      "metadata": {
+        "id": "adb458e0"
+      },
+      "source": [
+        "We'll need the starter script, downloading from the DESI High repo:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "746096fd",
+      "metadata": {
+        "id": "746096fd",
+        "outputId": "83360bfc-2710-43b1-ce6c-9daf21d82747",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File ‘colab.py’ already there; not retrieving.\n"
+          ]
+        }
+      ],
+      "source": [
+        "! wget --no-clobber -O colab.py https://raw.githubusercontent.com/michaelJwilson/desihigh/main/colab.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0e65366d",
+      "metadata": {
+        "id": "0e65366d"
+      },
+      "source": [
+        "So, without further ado, the magic incantation:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "2d9fe293",
+      "metadata": {
+        "id": "2d9fe293"
+      },
+      "outputs": [],
+      "source": [
+        "import colab"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "44a7ba81",
+      "metadata": {
+        "id": "44a7ba81"
+      },
+      "source": [
+        "Congratulations, you've just loaded your first Python library!  And it's a useful one aswell."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b3a627e5",
+      "metadata": {
+        "id": "b3a627e5"
+      },
+      "source": [
+        "Now, we can get started with the real thing.  Buckle up!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5f541ea9",
+      "metadata": {
+        "id": "5f541ea9"
+      },
+      "source": [
+        "[https://www.githubtocolab.com/michaelJwilson/desihigh](https://www.githubtocolab.com/michaelJwilson/desihigh)"
+      ]
     }
-   ],
-   "source": [
-    "! wget -O setup_colab.py https://raw.githubusercontent.com/michaelJwilson/desihigh/main/setup_colab.py"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.11"
+    },
+    "colab": {
+      "name": "Colab.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "0e65366d",
-   "metadata": {},
-   "source": [
-    "So, without further ado, the magic incantation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d9fe293",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import setup_colab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44a7ba81",
-   "metadata": {},
-   "source": [
-    "Congratulations, you've just loaded your first Python library!  And it's a useful one aswell."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3a627e5",
-   "metadata": {},
-   "source": [
-    "Now, we can get started with the real thing.  Buckle up!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f541ea9",
-   "metadata": {},
-   "source": [
-    "[https://www.githubtocolab.com/michaelJwilson/desihigh](https://www.githubtocolab.com/michaelJwilson/desihigh)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.11"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
